--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-destaque: #29678b;
+    --cor-destaque: #2a467a;
     --cor-gradiente-preto: linear-gradient(113deg, #000 0%, #1E2021 44.96%, #1E2022 100%);
 }
 
